Search/Filter/Delete Metadata Keywords(Named References) Enabling (#426)
* Refactoring Controller to accept keyword type

* Renaming Keyword RoutePaths

* Addind overloaded typeAheadSearch method with pageable

* Working on UI, adding service endpoint calls, adding service to NR table components.

* Converting delete process to be task result, adjusting labels for plural category

* removing unused named reference service, fixing enum issue, fixing case insensitive sort..

* adding unit tests

* Removing unused code for category screens, updating API yaml file

* Removing hardcoded totalPageCount for named reference table, removing unused imports.

* Reverting skillCount field back, fixing some PR comments, updating openapi.yaml

* Removing unused imports.

* Removing unused imports.

* Refactoring deletion logic, fixing mock data.

* Removing comented out line

* Removing unused RoutePath

* Add postman tests for job codes

* Adding test coverage scripts

* Adding test coverage scripts

* Adding test coverage scripts

* Correcting scripts.

* Removing category script tests, No more needed.

* Fix job code tests

* Add pre request in id folder

* Fix get pagination

- Remove query parameter

* Updating update keyword test.

---------
